@@ -1,5 +1,25 @@
-#include <dfsch/promise.h>
+/*
+ * dfsch - dfox's quick and dirty scheme implementation
+ *   Promises
+ * Copyright (C) 2005 Ales Hakl
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ *
+ */
 
+#include <dfsch/promise.h>
 
 dfsch_object_t* promise_type(){
   static dfsch_object_t* cache = NULL;
@@ -39,6 +59,6 @@ dfsch_object_t* dfsch_force_promise(dfsch_object_t* promise){
   return p->value;
 
 }
-dfsch_object_t* dfsch_stream_rest(dfsch_object_t* stream){
+dfsch_object_t* dfsch_stream_tail(dfsch_object_t* stream){
   return dfsch_force_promise(dfsch_cdr(stream));
 }
